--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Portal</title>
+    <link rel="shortcut icon" type="x-icon" href="space.png">
+
     
      <style>
         body {
